<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/verd">
    <TextView
        android:id="@+id/text_SignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"

        android:text="@string/Register"
        android:textSize="40dp"
        android:textStyle="bold"
        android:textColor="@color/blauMari"

        android:layout_marginTop="50dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <TextView
        android:id="@+id/text_nom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"

        android:text="@string/Nom"
        android:textColor="@color/blauMari"
        android:textSize="20dp"
        android:textStyle="bold"

        android:layout_marginTop="60dp"
        android:layout_marginLeft="60dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_SignUp"
        />
    <EditText
        android:id="@+id/Nom"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"

        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_nom"
        />
    <TextView
        android:id="@+id/text_correu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"

        android:text="@string/Correu"
        android:textColor="@color/blauMari"
        android:textSize="20dp"
        android:textStyle="bold"

        android:layout_marginTop="20dp"
        android:layout_marginLeft="60dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Nom"
        />
    <EditText
        android:id="@+id/Mail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"

        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_correu"
        />
    <TextView
        android:id="@+id/text_contrasenya"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"

        android:text="@string/Contrasenya"
        android:textColor="@color/blauMari"
        android:textSize="20dp"
        android:textStyle="bold"

        android:layout_marginTop="20dp"
        android:layout_marginLeft="60dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Mail"
        />
    <EditText
        android:id="@+id/Contrasenya"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"

        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_contrasenya"
        />
    <TextView
        android:id="@+id/text_contrasenya2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"

        android:text="@string/Contrasenya2"
        android:textColor="@color/blauMari"
        android:textSize="20dp"
        android:textStyle="bold"

        android:layout_marginTop="20dp"
        android:layout_marginLeft="60dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Contrasenya"
        />
    <EditText
        android:id="@+id/Contrasenya2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"

        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_contrasenya2"
        />
    <Button
        android:id="@+id/botoregister"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        
        android:text="@string/Register"
        android:textStyle="bold"
        android:textColor="@color/blauMari"
        android:backgroundTint="@color/turquesa"
        android:textSize="15dp"

        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/Contrasenya2"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>