<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/verd"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/loginlayout">

    <TextView
        android:id="@+id/text_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"

        android:text="@string/LogIn"
        android:textSize="40dp"
        android:textStyle="bold"
        android:textColor="@color/blauMari"

        android:layout_marginTop="50dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/text_Mail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"

        android:text="@string/Usuari"
        android:textColor="@color/blauMari"
        android:textSize="20dp"
        android:textStyle="bold"

        android:layout_marginTop="60dp"
        android:layout_marginLeft="60dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_login"
        />
    <EditText
        android:id="@+id/Mail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"

        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_Mail"
        />
    <TextView
        android:id="@+id/text_contrasenya"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"

        android:text="@string/Contrasenya"
        android:textColor="@color/blauMari"
        android:textSize="20dp"
        android:textStyle="bold"

        android:layout_marginTop="20dp"
        android:layout_marginLeft="60dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Mail"
        />
    <EditText
        android:id="@+id/Contrasenya"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"

        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_contrasenya"
        />
    <Button
        android:id="@+id/btnLogIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"

        android:text="@string/LogIn"
        android:textStyle="bold"
        android:textColor="@color/blauMari"
        android:backgroundTint="@color/turquesa"

        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Contrasenya"
        />
</androidx.constraintlayout.widget.ConstraintLayout>
